--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
       section label{font-size: 30px;}
     
     </style>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
@@ -37,6 +38,10 @@
      
    
     </div>
+    <div id="colocar_valor">
+
+    </div>
+
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
