--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,16 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  
+
   </head>
   <body>
+        <script>
+      const url_atual = window.location.href
+      if (!url_atual.includes("param1") || !url_atual.includes("param2")){
+        window.location.replace("http://localhost:8000/grafico/density-map/?param1=01/12/2024&param2=00:00");
+      }
+    </script>
     <div class="container">
     
     <h1>testando sobre o gráfico</h1>
@@ -23,7 +31,7 @@
       {% block 'forms' %}
       {% endblock %}
     </select>
-    <select class="form-select" aria-label="Default select example" id="hour_form" name="hour_form" style="width: fit-content;" onclick="atualizar_url1()">
+    <select class="form-select" aria-label="Default select example" id="hour_form" name="hour_form" style="width: fit-content;" onclick="atualizar_url1()" onload="selecionarHora()">
       {% block 'hours_form' %}
       {% endblock %}
 
@@ -41,8 +49,27 @@
     <div id="colocar_valor">
 
     </div>
+  
+    <script>
+      function selecionarHora(){
+        const urlParams = new URLSearchParams(window.location.search);
 
-   
+        const param2Value = urlParams.get("param2");
+        document.getElementById('hour_form').value = param2Value;
+      
+      }
+      document.addEventListener("DOMContentLoaded", function() {
+      if (url_atual.includes("param1") && url_atual.includes("param2")){
+        const urlParams = new URLSearchParams(window.location.search);
+
+        const param1Value = urlParams.get("param1");
+        
+       
+        document.getElementById('data_form').value = param1Value;
+        atualizar_horarios()
+      }
+    })
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
