inicializando com carros e motos selecionados

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <script>
       const url_atual = window.location.href
       if (!url_atual.includes("param1") || !url_atual.includes("param2")){
-        window.location.replace("http://localhost:8000/grafico/density-map/?param1=01/12/2024&param2=00:00");
+        window.location.replace("http://localhost:8000/grafico/density-map/?param1=01/12/2024&param2=00:00&param3=carros%20motos%20");
       }
     </script>
     <div class="container">
