--- a/grafico/templates/density_map.html
+++ b/grafico/templates/density_map.html
@@ -181,6 +181,34 @@ window.location.href = url;
 {% endblock %}
 
 
+{% block 'colorConfiguration' %}
+
+<script>
+    function atualizarCores(){
+        
+    if (document.getElementById('vermelho').value &&
+     document.getElementById('laranja').value && 
+     document.getElementById('amarelo').value && 
+     document.getElementById('azul').value
+     )
+     {
+        const atualUrl = window.location.href
+        dados = document.getElementById('vermelho').value + "_" + document.getElementById('laranja').value  + "_" + document.getElementById('amarelo').value + "_" + document.getElementById('azul').value;
+        const urlDestino = atualUrl+`&param4=${dados}`
+        
+       
+
+        window.location.href = urlDestino
+     }else{
+        alert("Preencha todos os campos")
+     }
+    }
+</script>
+
+
+{% endblock %}
+
+
 {% block 'dashboard1' %}
    
 
