--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
       <label for="azul">Azul:</label>
       <input type="text" id="azul" name="azul">
       <label for="verde">Verde:</label>
-      <input type="text" id="verde" name="verde" disabled value="Verde será tudo abaixo de azul">
+      <input type="text" id="verde" name="verde" disabled value="Verde < Azul">
       {% block 'colorConfiguration' %}
       {% endblock %}
       <button onclick="atualizarCores()">Atualizar cores</button>
