atualizando e guardando valores e exibindo como Value nos input

--- a/grafico/templates/density_map.html
+++ b/grafico/templates/density_map.html
@@ -192,18 +192,26 @@ window.location.href = url;
      document.getElementById('azul').value
      )
      {
-        const urlParams = new URLSearchParams(window.location.search);
+        let urlParams = new URLSearchParams(window.location.search);
         let atualUrl = window.location.href
         dados = document.getElementById('vermelho').value + "_" + document.getElementById('laranja').value  + "_" + document.getElementById('amarelo').value + "_" + document.getElementById('azul').value;
         let urlDestino = ''
-        if (atualUrl.includes('param4')){
-            atualUrl = urlParams.set("param4",dados);
-            urlDestino = atualUrl
+        let novaUrl = new URL(atualUrl);
+        if (novaUrl.search.includes('param4')) {
+        urlParams.set("param4", decodeURIComponent(dados)); 
+        novaUrl.search = urlParams.toString(); 
+        urlDestino = novaUrl.toString(); 
+        
+
         }else{
         urlDestino = atualUrl+`&param4=${dados}`
+        
+       
         }
        
-
+        console.log(urlDestino)
+        
+        
         window.location.href = urlDestino
      }else{
         alert("Preencha todos os campos")
