--- a/templates/base.html
+++ b/templates/base.html
@@ -1,156 +1,201 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
-  <head>
-    <style>
-   
-      section label{font-size: 30px;}
-    
-    </style>
-    
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
 
-  </head>
-  <body>
-        <script>
-      const url_atual = window.location.href
-      if (!url_atual.includes("param1") || !url_atual.includes("param2") || !url_atual.includes("param3")){
-        window.location.replace("http://localhost:8000/grafico/density-map/?param1=01/12/2024&param2=00:00&param3=carros%20motos%20");
-      }
-    </script>
-    <div class="container">
-    
-    <h1>testando sobre o gráfico</h1>
-    <label for="data_form">Escolha o dia:</label>
-    <select class="form-select" aria-label="Default select example" id="data_form" name="data_form" style="width: fit-content;" onclick="atualizar_url1() ; atualizar_horarios()">
-      {% block 'forms' %}
-      {% endblock %}
-    </select>
-    <select class="form-select" aria-label="Default select example" id="hour_form" name="hour_form" style="width: fit-content;" onclick="atualizar_url1()" onload="selecionarHora()">
-      {% block 'hours_form' %}
-      {% endblock %}
+<head>
+  <style>
+    section label {
+      font-size: 30px;
+    }
+  </style>
 
-    </select>
-    
-    <script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap Demo</title>
 
-      fetch('{% static "cores.json" %}').then(response => response.json()).then(data => {
-     
-      let vermelho = data.vermelho;
-      let laranja = data.laranja;
-      let amarelo = data.amarelo;
-      let azul = data.azul;
-      let h2RED = document.getElementById('vermelho');
-      let h2ORANGE = document.getElementById('laranja');
-      let h2YELLOW = document.getElementById('amarelo');
-      let h2BLUE = document.getElementById('azul');
-      let h2GREEN = document.getElementById('verde');
-      h2RED.value = vermelho;
-      h2ORANGE.value = laranja;
-      h2YELLOW.value = amarelo;
-      h2BLUE.value = azul;
-      h2GREEN.value = azul - 1;
-      })
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'estilo.css' %}">
 
-    </script>
-   
-    <div class="configuracao">
-      <label for="vermelho">Vermelho:</label>
-      <input type="text" id="vermelho" name="vermelho">
-      <label for="laranja">Laranja:</label>
-      <input type="text" id="laranja" name="laranja">
-      <label for="amarelo">Amarelo:</label>
-      <input type="text" id="amarelo" name="amarelo">
-      <label for="azul">Azul:</label>
-      <input type="text" id="azul" name="azul">
-      <label for="verde">Verde:</label>
-      <input type="text" id="verde" name="verde" disabled value="Verde < Azul">
-      {% block 'colorConfiguration' %}
-      {% endblock %}
-      <button onclick="atualizarCores()">Atualizar cores</button>
+</head>
+
+<body>
+  <script>
+    const url_atual = window.location.href
+    if (!url_atual.includes("param1") || !url_atual.includes("param2") || !url_atual.includes("param3")) {
+      window.location.replace("http://localhost:8000/grafico/density-map/?param1=01/12/2024&param2=00:00&param3=carros%20motos%20");
+    }
+  </script>
+
+  <nav>
+    <img src="" alt="Logo">
+    <ul>
+      <a href="#">
+        <li>Sobre</li>
+      </a>
+      <a href="#">
+        <li>Sair</li>
+      </a>
+    </ul>
+  </nav>
+
+  <div class="container">
+    <div class="container-filtros">
+      <div class="titulo-filtro">
+        <img src="{% static 'imagens/icone-filtro.png' %}" alt="icone filtro">
+        <h3>Filtros</h3>
+      </div>
+
+      <fieldset>
+        <legend>Data/Hora</legend>
+        <div class="container-input">
+          <div class="wrapper dataHora">
+            <img src="{% static 'imagens/icone-calendario.png' %}" alt="icone calendario">
+            <label for="data_form">Data</label>
+          </div>
+          <select class="form-select" aria-label="Default select example" id="data_form" name="data_form"
+            style="width: fit-content;" onclick="atualizar_url1(); atualizar_horarios()">
+            {% block 'forms' %}{% endblock %}
+          </select>
+        </div>
+
+        <div class="container-input">
+          <div class="wrapper data-hora">
+            <img src="{% static 'imagens/icone-relogio.png' %}" alt="icone relogio">
+            <label for="hour_form">Hora</label>
+          </div>
+          <select class="form-select" aria-label="Default select example" id="hour_form" name="hour_form"
+            style="width: fit-content;" onclick="atualizar_url1()" onload="selecionarHora()">
+            {% block 'hours_form' %}{% endblock %}
+          </select>
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <legend>Configuração Cores</legend>
+        <div class="configuracao">
+          <div class="container-cores">
+            <div class="container-input">
+              <label for="vermelho">Vermelho:</label>
+              <div class="wrapper">
+                <img src="{% static 'imagens/Ellipse-vermelho.png' %}" alt="">
+                <input type="text" id="vermelho" name="vermelho">
+              </div>
+            </div>
+            <div class="container-input">
+              <label for="laranja">Laranja:</label>
+              <div class="wrapper">
+                <img src="{% static 'imagens/Ellipse-laranja.png' %}" alt="">
+                <input type="text" id="laranja" name="laranja">
+              </div>
+            </div>
+            <div class="container-input">
+              <label for="amarelo">Amarelo:</label>
+              <div class="wrapper">
+                <img src="{% static 'imagens/Ellipse-amarelo.png' %}" alt="">
+                <input type="text" id="amarelo" name="amarelo">
+              </div>
+            </div>
+            <div class="container-input">
+              <label for="azul">Azul:</label>
+              <div class="wrapper">
+                <img src="{% static 'imagens/Ellipse-azul.png' %}" alt="">
+                <input type="text" id="azul" name="azul">
+              </div>
+            </div>
+            <div class="container-input">
+              <label for="verde">Verde:</label>
+              <div class="wrapper">
+                <img src="{% static 'imagens/Ellipse-verde.png' %}" alt="">
+                <input type="text" id="verde" name="verde" disabled value="Verde < Azul">
+              </div>
+            </div>
+          </div>
+          {% block 'colorConfiguration' %}{% endblock %}
+          <button class="botao" onclick="atualizarCores()">Atualizar cores</button>
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <legend>Veículos</legend>
+        <div class="wrapper v">
+          <input type="checkbox" name="carros" id="carros">
+          <p>Carros</p>
+        </div>
+        <div class="wrapper v">
+          <input type="checkbox" name="motos" id="motos">
+          <p>Motos</p>
+        </div>
+        <div class="wrapper v">
+          <input type="checkbox" name="vans" id="vans" disabled>
+          <p>Vans</p>
+        </div>
+        <div class="wrapper v">
+          <input type="checkbox" name="caminhoes" id="caminhoes" disabled>
+          <p>Caminhões</p>
+        </div>
+        <div class="wrapper v">
+          <input type="checkbox" name="onibus" id="onibus" disabled>
+          <p>Onibus</p>
+        </div>
+      </fieldset>
+
+      <button class="botao" onclick="atualizarMapaComParametros()">Atualizar</button>
     </div>
-<!-- 
-    <select name="ruas" id="ruas" multiple >
-     <option value="none">Selecione as ruas</option>
-     <option value="">rua A</option>                                 FAZER UM SELECT MELHORZINHO DO QUE O PADRÃO
-     <option value="">rua B</option>
-     <option value="">rua C</option>
-     <option value="">rua D</option>
-     <option value="">rua E</option>
 
+    {% block 'dashboard1' %}{% endblock %}
+  </div>
 
-    </select> -->
+  <div id="colocar_valor"></div>
 
-    <input type="checkbox" name="carros" id="carros">Carros
-    <input type="checkbox" name="motos" id="motos">Motos
-    <input type="checkbox" name="vans" id="vans" disabled>Vans
-    <input type="checkbox" name="caminhoes" id="caminhoes" disabled>Caminhões
-    <input type="checkbox" name="onibus" id="onibus" disabled>Onibus
-    <button class="btn btn-primary" onclick="atualizarMapaComParametros()"></button>
-
-
-    <h1>Mapa de Densidade com Filtro</h1>
-     
-        {% block 'dashboard1' %}
-        {% endblock %}
-     
-   
-    </div>
-    <div id="colocar_valor">
-
-    </div>
-  
-    <script>
-
-      document.addEventListener("DOMContentLoaded", function() {
-      if (url_atual.includes("param1") && url_atual.includes("param2")){
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      if (url_atual.includes("param1") && url_atual.includes("param2")) {
         const urlParams = new URLSearchParams(window.location.search);
 
         const param1Value = urlParams.get("param1");
         const param2Value = urlParams.get("param2");
         let param3value = urlParams.get("param3");
-        if (param3value){
+        if (param3value) {
           param3value = param3value.trim()
-        let arraysplit = param3value.split(" ");
-console.log(arraysplit)
-arraysplit.forEach(element => {
-  console.log(element)
-    if (element) { 
-        switch (element) {
-            case "carros":
-                document.getElementById(element).checked = true;
-                break;
-            case "motos":
-                document.getElementById(element).checked = true;
-                break;
-            case "vans":
-                document.getElementById(element).checked = true;
-                break;
-            case "caminhoes":
-                document.getElementById(element).checked = true;
-                break;
-            case "onibus":
-                document.getElementById(element).checked = true;
-                break;
-            default:
-                break;
+          let arraysplit = param3value.split(" ");
+          arraysplit.forEach(element => {
+            if (element) {
+              switch (element) {
+                case "carros":
+                  document.getElementById(element).checked = true;
+                  break;
+                case "motos":
+                  document.getElementById(element).checked = true;
+                  break;
+                case "vans":
+                  document.getElementById(element).checked = true;
+                  break;
+                case "caminhoes":
+                  document.getElementById(element).checked = true;
+                  break;
+                case "onibus":
+                  document.getElementById(element).checked = true;
+                  break;
+                default:
+                  break;
+              }
+            }
+          });
         }
-    }
-});}
-        
-       
+
         document.getElementById('data_form').value = param1Value;
         atualizar_horarios()
         document.getElementById('hour_form').value = param2Value;
       }
     })
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
