--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Demo</title>
-
+  <link rel="shortcut icon" href="{% static 'imagens/favicon.svg' %}" type="image/x-icon">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,9 +28,28 @@
       window.location.replace("http://localhost:8000/grafico/density-map/?param1=01/12/2024&param2=00:00&param3=carros%20motos%20");
     }
   </script>
+      <script>
+        fetch('{% static "cores.json" %}').then(response => response.json()).then(data => {
+       
+        let vermelho = data.vermelho;
+        let laranja = data.laranja;
+        let amarelo = data.amarelo;
+        let azul = data.azul;
+        let h2RED = document.getElementById('vermelho');
+        let h2ORANGE = document.getElementById('laranja');
+        let h2YELLOW = document.getElementById('amarelo');
+        let h2BLUE = document.getElementById('azul');
+        let h2GREEN = document.getElementById('verde');
+        h2RED.value = vermelho;
+        h2ORANGE.value = laranja;
+        h2YELLOW.value = amarelo;
+        h2BLUE.value = azul;
+        h2GREEN.value = azul - 1;
+        })
+      </script>
 
   <nav>
-    <img src="" alt="Logo">
+    <img src="{% static 'imagens/logo.png' %}" alt="Logo">
     <ul>
       <a href="#">
         <li>Sobre</li>
@@ -83,6 +102,7 @@
                 <img src="{% static 'imagens/Ellipse-vermelho.png' %}" alt="">
                 <input type="text" id="vermelho" name="vermelho">
               </div>
+              
             </div>
             <div class="container-input">
               <label for="laranja">Laranja:</label>
