--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -54,7 +55,8 @@
       <a href="#">
         <li>Sobre</li>
       </a>
-      <a href="#">
+      <a href="{% url 'grafico:login' %}">
+
         <li>Sair</li>
       </a>
     </ul>
