--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
       <a href="#">
         <li>Sobre</li>
       </a>
-      <a href="{% url 'grafico:login' %}">
+      <a href="/">
 
         <li>Sair</li>
       </a>
