--- a/templates/base.html
+++ b/templates/base.html
@@ -23,31 +23,7 @@
 </head>
 
 <body>
-  <script>
-    const url_atual = window.location.href
-    if (!url_atual.includes("param1") || !url_atual.includes("param2") || !url_atual.includes("param3")) {
-      window.location.replace("http://localhost:8000/grafico/density-map/?param1=01/12/2024&param2=00:00&param3=carros%20motos%20");
-    }
-  </script>
-      <script>
-        fetch('{% static "cores.json" %}').then(response => response.json()).then(data => {
-       
-        let vermelho = data.vermelho;
-        let laranja = data.laranja;
-        let amarelo = data.amarelo;
-        let azul = data.azul;
-        let h2RED = document.getElementById('vermelho');
-        let h2ORANGE = document.getElementById('laranja');
-        let h2YELLOW = document.getElementById('amarelo');
-        let h2BLUE = document.getElementById('azul');
-        let h2GREEN = document.getElementById('verde');
-        h2RED.value = vermelho;
-        h2ORANGE.value = laranja;
-        h2YELLOW.value = amarelo;
-        h2BLUE.value = azul;
-        h2GREEN.value = azul - 1;
-        })
-      </script>
+
 
   <nav style="width: 100%;display: flex;justify-content: space-between;align-items: center;padding-right: 50px;">
     <img src="{% static 'imagens/logo.png' %}" alt="Logo">
@@ -55,7 +31,8 @@
       <a href="#">
         <li>Gráfico</li>
       </a>
-      <a href="#">
+     
+      <a href="/grafico/relatorio"> <!--""/grafico/templates/relatorio.html"-->
         <li>Relatório</li>
       </a>
 
