adicionando imagem no static e no slide, alterando manuseador por gerenciador no slide

--- a/grafico/templates/density_map.html
+++ b/grafico/templates/density_map.html
@@ -358,6 +358,31 @@ window.location.href = url;
 {% endblock %}
 
 
+{% block 'filtro_rua' %}
+
+
+<select name="ruas" id="ruas" class="form-control" multiple >
+
+    <option value="">a</option>
+    <option value="">b</option>
+    <option value="">c</option>
+    <option value="">d</option>
+    <option value="">e</option>
+    <option value="">f</option>
+    <option value="">g</option>
+    <option value="">h</option>
+    <option value="">i</option>
+    <option value="">j</option>
+
+</select>
+
+
+
+
+{% endblock %}
+
+
+
 {% block 'dashboard1' %}
    
 
