--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,6 @@
       font-size: 30px;
     }
   </style>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Demo</title>
@@ -19,6 +18,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'estilo.css' %}">
+  <link rel="stylesheet" href="{% static 'bootstrap-multiselect.css' %}">
 
 </head>
 
@@ -28,7 +28,7 @@
   <nav style="width: 100%;display: flex;justify-content: space-between;align-items: center;padding-right: 50px;">
     <img src="{% static 'imagens/logo.png' %}" alt="Logo">
     
-      <a href="#">
+      <a href="/grafico/density-map/">
         <li>Gráfico</li>
       </a>
      
@@ -48,7 +48,7 @@
   </nav>
 
 
-
+  {% block 'filtro_rua' %}{% endblock %}
 
 
           {% block 'data' %}{% endblock %}
@@ -68,6 +68,8 @@
      
 
     {% block 'dashboard1' %}{% endblock %}
+
+  
   </div>
 
   
@@ -118,6 +120,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+    <script src="{% static 'bootstrap-multiselect.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#ruas').multiselect()
+    })
+
+</script>
 </body>
 
 </html>
