--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Demo</title>
   <link rel="shortcut icon" href="{% static 'imagens/favicon.svg' %}" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag@3.1.0/dist/css/multi-select-tag.css">
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'estilo.css' %}">
-  <link rel="stylesheet" href="{% static 'bootstrap-multiselect.css' %}">
 
 </head>
 
@@ -120,15 +121,24 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <script src="{% static 'bootstrap-multiselect.js' %}"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag@3.1.0/dist/js/multi-select-tag.js"></script>
 
-<script type="text/javascript">
-    $(document).ready(function(){
-        $('#ruas').multiselect()
-    })
-
-</script>
+    <script>
+      document.addEventListener("DOMContentLoaded", ()=> {
+     new MultiSelectTag('ruas', {
+        rounded: true,    // default true
+        shadow: true,      // default false
+        placeholder: 'Search',  // default Search...
+        tagColor: {
+            textColor: '#327b2c',
+            borderColor: '#92e681',
+            bgColor: '#eaffe6',
+        },
+        onChange: function(values) {
+            console.log(values)
+        }
+    })})
+    </script>
 </body>
 
 </html>
